# synapse-ai

./: .gitignore  LICENSE  README.md  chatbot.py  main.py  pyproject.toml  test.py
components/: llm.py  prompt.py  rag.py
data/documents/: langchain.md  sample text file.txt  test.md
scripts/: index_documents.py
streamlit_app/: home.py
