[project]
name = "synapse-ai"
version = "0.1.0"
description = "An extensible AI platform built with LangChain."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community",
    "langchain-openai>=1.3.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
]
